--- a/css/index.css
+++ b/css/index.css
@@ -184,6 +184,66 @@ button {
   visibility: visible;
 }
 
+/**************Loading Spinner**************/
+
+.overlay {
+  background: #1B242F;
+  background-image: linear-gradient(to bottom, #1b242f, #182632, #132834, #0d2b36, #052d37);
+  background-image: url("../images/leaf_overlay.png"), linear-gradient(to bottom,  #182632, #132834);
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.circle-border {
+  width: 150px;
+  height: 150px;
+  padding: 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  border: 0.5px #052d37 solid;
+  background: #f51472;
+  background: linear-gradient(
+    0deg,
+    rgba(245, 20, 114, 0.15) 33%,
+    rgba(245, 20, 114, 1) 100%
+  );
+  animation: spin 0.8s linear 0s infinite;
+}
+
+.circle-center {
+  width: 100%;
+  height: 100%;
+  background: #1B242F;
+  border-radius: 50%;
+  animation: none;
+}
+
+.content{
+  width: 143px;
+  height: 143px;
+  position: absolute;
+  background: #1B242F;
+  background-image: linear-gradient(to bottom, #1b242f, #182632, #132834, #0d2b36, #052d37);
+  background-image: url("../images/leaf_overlay.png"), linear-gradient(to bottom, #182632, #132834);
+  border-radius: 50%;
+  -webkit-box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, 0.71);
+  -moz-box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, 0.71);
+  box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, 0.71);
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
+
 /**************NAVIGATION**************/
 
 header {
