--- a/css/index.css
+++ b/css/index.css
@@ -186,6 +186,7 @@ button {
 
 /**************Loading Spinner**************/
 
+/***LOADER BACKGROUND***/
 .overlay{
   background: #1B242F;
   background-image: linear-gradient(to bottom, #1b242f, #182632, #132834, #0d2b36, #052d37);
@@ -198,16 +199,18 @@ button {
   z-index: 9999;
 }
 
+/***LOADER CONTAINER***/
 .loader {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 38%;
+  left: 51%;
   transform: translate(-50%, -50%);
 }
 
-.circle-border{
-  width: 200px;
-  height: 200px;
+/***OUTER PINK CIRCLE***/
+.outer-circle{
+  width: 225px;
+  height: 225px;
   padding: 3px;
   display: flex;
   justify-content: center;
@@ -220,20 +223,13 @@ button {
     rgba(245, 20, 114, 0.15) 33%,
     rgba(245, 20, 114, 1) 100%
   );
-  animation: spin 0.8s linear 0s infinite;
+  animation: spin 1.3s linear 0s infinite;
 }
 
-.circle-center {
-  width: 100%;
-  height: 100%;
-  background: #1B242F;
-  border-radius: 50%;
-  animation: none;
-}
-
-.content{
-  width: 190px;
-  height: 190px;
+/***TEXT CONTAINER***/
+.center{
+  width: 216px;
+  height: 216px;
   position: absolute;
   top: 5px;
   left:5px;
@@ -245,14 +241,56 @@ button {
   -moz-box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, 0.71);
   box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, 0.71);
   z-index: 3;
+  display: flex;
+  justify-content: center;
 }
 
+ /***TEXT***/
+.center span{
+  position: absolute;
+  top: 37%;
+  color: white;
+  font-size: 1.6rem;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  animation: flash 1.3s linear 0s infinite;
+}
+
+/***HIDDING LOADER***/
 .overlay.hidden{
   animation: fadeOut 1s;
   animation-fill-mode: forwards;
   min-width: 0vw;
   min-height: 0vh; 
 
+}
+
+/***OUTER CIRCLE ANIMATION***/
+@-webkit-keyframes spin {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
+
+@-moz-keyframes spin {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
+
+@-o-keyframes spin {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(359deg);
+  }
 }
 
 @keyframes spin {
@@ -264,13 +302,59 @@ button {
   }
 }
 
-@keyframes fadeOut{
+/***TEXT ANIMATION***/
+@-webkit-keyframes flash { 
+  from { opacity: 1 }
+  50% { opacity: 0 }
+  to { opacity: 1 } 
+}
+
+@-moz-keyframes flash { 
+  from { opacity: 1 }
+  50% { opacity: 0 }
+  to { opacity: 1 } 
+}
+
+@-o-keyframes flash { 
+  from { opacity: 1 }
+  50% { opacity: 0 }
+  to { opacity: 1 } 
+}
+
+@keyframes flash { 
+  from { opacity: 1 }
+  50% { opacity: 0 }
+  to { opacity: 1 } 
+}
+
+/***HIDDING LOADER ANIMATION***/
+@-webkit-keyframes fadeOut{
 	100%{
 		opacity: 0;
 		visibility: hidden;
 	}
 }
 
+@-moz-keyframes fadeOut{
+	100%{
+		opacity: 0;
+		visibility: hidden;
+	}
+}
+
+@-o-keyframes fadeOut{
+	100%{
+		opacity: 0;
+		visibility: hidden;
+	}
+}
+
+@keyframes fadeOut{
+	100%{
+		opacity: 0;
+		visibility: hidden;
+	}
+}
 
 /**************NAVIGATION**************/
 
@@ -357,6 +441,7 @@ nav .nav-item {
 }
 
 .jumbotron-img {
+  
   margin: 20px;
 }
 
